fixed styling on login page where word 'password' was too low in chrome

--- a/public/stylesheets/sass/screen_IE.scss
+++ b/public/stylesheets/sass/screen_IE.scss
@@ -119,9 +119,7 @@ body.scores {
   // top: -25px;
   // left: 275px;
 // }
-#password_prompt{
-  top: -7px;
-}
+
 #session_email{
   padding-left: 15px !important;
   width: 300px;
