--- a/public/stylesheets/sass/screen_IE7.scss
+++ b/public/stylesheets/sass/screen_IE7.scss
@@ -236,9 +236,7 @@ body.users-index {
   padding-top: 8px;
   padding-bottom: 2px;
 }
-#password_prompt{
-  top: 7px;
-}
+
 #command_central{
   margin-top: 9px;
 }
@@ -250,4 +248,8 @@ body.users-index {
 
 .single_click_invite{
   width: 6em;
+}
+
+#password_prompt{
+  bottom: 21px;
 }
