--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -501,7 +501,7 @@ a.feedback {
 #password_prompt{
   position: absolute;
   left: 13px;
-  top: -5px;
+  bottom: 0px;
   font-size: 20px;
   color: $med-gray;
 }
